--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-cloud/text-to-speech": "^5.6.0",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "sass": "^1.81.1"
+    "regenerator-runtime": "^0.14.1",
+    "sass": "^1.82.0",
+    "sass-loader": "^16.0.4",
+    "speak-tts": "^2.0.8",
+    "webpack": "^5.97.0"
   },
   "devDependencies": {
     "@types/node": "^20",
