--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-router-dom": "^7.0.2",
     "regenerator-runtime": "^0.14.1",
     "sass": "^1.82.0",
     "sass-loader": "^16.0.4",
