--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "radix-ui": "^1.0.1",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-router-dom": "^7.0.2",
     "react-hook-form": "^7.54.0",
     "regenerator-runtime": "^0.14.1",
     "sass": "^1.82.0",
