--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-config-next": "15.0.3",
     "eslint-config-prettier": "^9.1.0",
     "react-loader-spinner": "^5.4.5",
+    "react-icons": "^5.4.0",
     "tsconfig": "*",
     "typescript": "^5"
   }
