--- a/package.json
+++ b/package.json
@@ -9,20 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "lucide-react": "^0.468.0",
     "@google-cloud/text-to-speech": "^5.6.0",
     "fuse.js": "^7.0.0",
+    "lucide-react": "^0.468.0",
     "next": "15.0.3",
     "radix-ui": "^1.0.1",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "react-router-dom": "^7.0.2",
+    "react": "^18.2",
+    "react-dom": "^18.2",
     "react-hook-form": "^7.54.0",
+    "react-router-dom": "^7.0.2",
     "regenerator-runtime": "^0.14.1",
     "sass": "^1.82.0",
     "sass-loader": "^16.0.4",
     "speak-tts": "^2.0.8",
-    "webpack": "^5.97.0"
+    "webpack": "^5.97.0",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@types/node": "^20",
