--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "next": "15.0.3",
     "radix-ui": "^1.0.1",
     "react": "^18.2",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2",
     "react-hook-form": "^7.54.0",
     "react-router-dom": "^7.0.2",
