--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@google-cloud/text-to-speech": "^5.6.0",
     "fuse.js": "^7.0.0",
     "lucide-react": "^0.468.0",
