--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2",
     "react-hook-form": "^7.54.0",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
     "regenerator-runtime": "^0.14.1",
     "sass": "^1.82.0",
